--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,10 @@ body {
     "Segoe UI", "Roboto", "Oxygen", 
     "Ubuntu", "Cantarell", "Fira Sans", 
     "Droid Sans", "Helvetica Neue", sans-serif;
+    padding-top: 40px; 
+    margin-left: 10px
 }
+
 #rupert {
     position: fixed;
     bottom: 0;
@@ -14,29 +17,30 @@ body {
 ul {
     position: fixed;
     top: 0;
-    width: 100%;
+    left: 0;
+    right: 0;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #333;
-    float: right;
 }
 
+li {
+    float: left;
+}
 
 li a {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;;
+    text-decoration: none;
 }
+
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
     background-color: #111;
 }
 
-.home {
-    float: left;
-}
