--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,29 +37,75 @@ li a {
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-    background-color: #111;
+	background-color: #111;
 }
 
-#text {
-    width: 66%
+.text {
+	width: 66%
 }
 
-#rupert {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    width: 34%;
+.rupert {
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	width: 34%;
+}
+
+.footer {
+	position: fixed;
+	height: 30px;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background-color: #333;
+	color: white;
+	padding-bottom: 20px;
+}
+
+.footer .icon {
+	display: inline-block;
+	align-content: center;
+	border-radius: 4px;
+	height: 30px;
+	margin-top: 10px;
+}
+
+.footer .icon img {
+	display: inline-block;
+	height: 30px;
+}
+
+.footer-left {
+	display: inline-block;
+	width: 33%;
+	float: left;
+	margin-left: 10px;
+	padding-top: 15px;
+}
+
+.footer-center {
+	display: inline-block;
+	width: 34%;
+	text-align: center;
+}
+
+.footer-right {
+	display: inline-block;
+	
+	float: right;
+	margin-right: 10px;
+	padding-top: 15px;
 }
 
 @media only screen and (max-width: 768px) {
-    #text {
-    width: 100%
+   .text {
+    width: 100%;
   }
 
-#rupert {
-    position: relative;
+	.rupert {
+  	position: relative;
     text-align: right;
-    bottom: 0;
+		bottom: 0;
     right: 0;
     width: 100%;
   }
