breakpoint works for the header I just need to figure out how to move the cv download to the footer when the breakpoint is triggered.  It's a bit tidier now though....

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -119,6 +119,20 @@ li a:hover {
     right: 0;
     width: 100%;
   }
+    
+  .logo {
+    display: block;
+    float: none;
+    width: 100%;
+    text-align: center;
+   }
+
+.cv {
+		float: none;
+    display: block;
+		width: 100%;
+    text-align: center;
+  }
 	
 	.footer {
 		display:flex; 
